--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,7 @@ en:
         current_plan: Current plan
         cancel_security: '🛡️ Cancel anytime. Secured by Stripe.'
       plan:
+        title: Manage subscription
         features: Current plan features
         manage_billing: Manage billing
         next_billing_date: Next billing date
