--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,3 +29,23 @@
 
 en:
   hello: "Hello world"
+  organizations:
+    subscriptions:
+      features:
+        title: "Features"
+      pricing:
+        title: Pricing
+        save_yearly: Best value
+        subscribe: Get started
+        current_plan: Current plan
+        cancel_security: '🛡️ Cancel anytime. Secured by Stripe.'
+      plan:
+        title: Manage subscription
+        features: Current plan features
+        manage_billing: Manage billing
+        next_billing_date: Next billing date
+        resume_subscription: Resume subscription
+        subscribe: Subscribe
+        subscription_active: Subscription active
+        subscription_cancelled: Subscription cancelled
+        you_will_lose_access_in: You will lose access in %{distance_of_time_in_words}
