--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,10 @@ en:
     memberships:
       create:
         success: "%{email} invited"
+      destroy:
+        failed_to_remove_user_from_organization: Failed to remove user from organization
+        user_removed_from_organization: User removed from organization
+        you_have_left_the_organization: You have left the organization
       index:
         title: Memberships
       new:
