i18n - move strings to locales (#215)
* i18n org

* Update devise.en.yml

* wip

* wip

* Update en.yml

* Update en.yml

* more

* wip

* wip

* more i18n

* wip

* wip

* Update en.yml

* clean

* wip

* wip

* wip

* wip

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,46 +1,48 @@
-# Files in the config/locales directory are used for internationalization and
-# are automatically loaded by Rails. If you want to use locales other than
-# English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more about the API, please read the Rails Internationalization guide
-# at https://guides.rubyonrails.org/i18n.html.
-#
-# Be aware that YAML interprets the following case-insensitive strings as
-# booleans: `true`, `false`, `on`, `off`, `yes`, `no`. Therefore, these strings
-# must be quoted to be interpreted as strings. For example:
-#
-#     en:
-#       "yes": yup
-#       enabled: "ON"
-
+---
 en:
-  hello: "Hello world"
+  activerecord:
+    attributes:
+      membership:
+        email: Email
+        role: Role
+      organization:
+        logo: Logo
+        name: Name
+    models:
+      membership: Member
+      organization: Space
   organizations:
+    create:
+      success: Space created
+    destroy:
+      success: Space destroyed
+    edit:
+      title: Edit space
+    index:
+      title: My spaces
+    memberships:
+      create:
+        success: "%{email} invited"
+      destroy:
+        failed_to_remove_user_from_organization: Failed to remove user from organization
+        user_removed_from_organization: User removed from organization
+        you_have_left_the_organization: You have left the organization
+      index:
+        title: Memberships
+      new:
+        title: Invite user
+      update:
+        success: User updated
+    new:
+      title: New space
+    show:
+      title: Space settings
     subscriptions:
       features:
-        title: "Features"
-      pricing:
-        title: Pricing
-        save_yearly: Best value
-        subscribe: Get started
-        current_plan: Current plan
-        cancel_security: '🛡️ Cancel anytime. Secured by Stripe.'
+        title: Features
+      index:
+        title: Billing
       plan:
-        title: Manage subscription
         features: Current plan features
         manage_billing: Manage billing
         next_billing_date: Next billing date
@@ -48,4 +50,41 @@ en:
         subscribe: Subscribe
         subscription_active: Subscription active
         subscription_cancelled: Subscription cancelled
+        title: Manage subscription
         you_will_lose_access_in: You will lose access in %{distance_of_time_in_words}
+      pricing:
+        cancel_security: "🛡️ Cancel anytime. Secured by Stripe."
+        current_plan: Current plan
+        save_yearly: Best value
+        subscribe: Get started
+        title: Pricing
+    transfers:
+      show:
+        title: Transfer space
+      update:
+        success: Ownership transferred
+    update:
+      success: Space updated
+  shared:
+    actions:
+      cancel: Cancel
+      confirm: Are you sure?
+      destroy: Destroy
+      edit: Edit
+      new: New
+    errors:
+      not_authorized: You are not authorized to perform this action.
+      not_subscribed: You need to subscribe to access this page.
+    navigation:
+      edit_profile: Edit profile
+      login: Log in
+      logout: Log out
+      register: Register
+      select_organization: Select organization
+  static:
+    pricing:
+      title: Pricing
+    privacy:
+      title: Privacy
+    terms:
+      title: Terms
