--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,6 +65,18 @@ en:
         success: Ownership transferred
     update:
       success: Organization updated
+  invitations:
+    index:
+      title: Pending invitations
+    approve:
+      success: Invitation approved
+    reject:
+      success: Invitation rejected
+    buttons:
+      approve: Join
+      reject: Reject
+    errors:
+      not_found: Invitation not found
   shared:
     actions:
       cancel: Cancel
@@ -82,6 +94,7 @@ en:
       logout: Log out
       register: Register
       select_organization: Select organization
+      pending_invitations: Pending invitations
   static:
     pricing:
       title: Pricing
