Add membership request management functionality
- Introduced Organizations::MembershipRequestsController for handling membership requests, including approval and rejection actions.
- Created Users::MembershipRequestsController for users to submit membership requests to organizations.
- Added MembershipRequest model to manage request logic and validations.
- Updated views for displaying and managing membership requests, including new index and user request forms.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,6 +81,8 @@ en:
         cancel: Cancel invitation
       errors:
         not_found: Invitation not found
+    errors:
+      not_found: Organization not found
   discovers:
     show:
       title: Discover
@@ -89,6 +91,8 @@ en:
         join: Join
         request_to_join: Request to join
         open: Open
+        waiting_for_approval: Waiting for approval
+        accept_invitation: Accept invitation
   invitations:
     index:
       title: Pending invitations
@@ -101,6 +105,22 @@ en:
       reject: Reject
     errors:
       not_found: Invitation not found
+  membership_requests:
+    index:
+      title: Membership Requests
+      page_title: Pending membership requests for %{organization}
+    buttons:
+      approve: Approve
+      reject: Reject
+    success: Requested access successfully
+    approve:
+      success: Membership request approved
+    reject:
+      success: Membership request rejected
+    errors:
+      not_found: Membership request not found
+      already_requested: You have already requested access to this organization
+      already_participant: You're already a member of this organization
   shared:
     actions:
       cancel: Cancel
