_membership - "leave" vs "remove" i18n

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -70,6 +70,9 @@ en:
         page_title: Pending invitations for %{organization}
         title: Pending invitations
     memberships:
+      actions:
+        leave: Leave
+        remove_member: Remove member
       create:
         success: "%{email} invited"
       destroy:
