--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -158,3 +158,6 @@ en:
     membership_requests:
       index:
         title: Outgoing membership requests
+    invitations:
+      index:
+        title: Outgoing invitations
