i18n - Decline invite, not Cancel

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,7 +52,7 @@ en:
       title: My organizations
     invitations:
       buttons:
-        cancel: Cancel invitation
+        cancel: Decline invitation
       create:
         success: "%{email} invited"
       destroy:
