Global search (organizations) (#256)
* global search

* cmd k

* search style

* Update _navbar.html.erb

* Update _navbar.html.erb

* Update index.html.erb

* Update index.html.erb

* Update index.html.erb

* Update index.html.erb

* fix modal to top

* Update _modal.html.erb

* i18n

* Update dialog_controller.js

* cleaner

* test

* debounce

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -127,6 +127,9 @@ en:
   routes:
     memberships: teammates
     organizations: organizations
+  search:
+    index:
+      title: Search...
   shared:
     actions:
       cancel: Cancel
