fix missing i18n on membership request revoke

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -162,5 +162,7 @@ en:
       index:
         title: Outgoing invitations
     membership_requests:
+      destroy:
+        success: Membership request revoked
       index:
         title: Outgoing membership requests
