privacy_setting_icon

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,7 +82,7 @@ en:
     new:
       title: New organization
     show:
-      title: Organization settings
+      title: Settings
     subscriptions:
       features:
         title: Features
