--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -166,13 +166,13 @@ en:
       destroy:
         success: Account disconnected successfully.
       index:
-        available_connections: Available Connections
+        available_connections: Available connections
         connect_button: Connect
         connect_provider_account: Connect your %{provider_name} account
         connect_to_enable_auth: Connect your accounts to enable seamless authentication.
         no_accounts_connected: You haven't connected any OAuth accounts yet.
-        title: Connected Accounts
-        your_connected_accounts: Your Connected Accounts
+        title: Connected accounts
+        your_connected_accounts: Your connected accounts
     invitations:
       index:
         title: Outgoing invitations
