Connected (oAuth) accounts (#262)
* connected accounts

rails g model ConnectedAccount user:references provider uid access_token refresh_token expires_at:datetime

* route

* google auth gem

* Update devise.rb

* w

* mvp

* google_onetap mvp

* tests wip

* resources :connected_accounts

* vibe style

* Update index.html.erb

* Update index.html.erb

* Update index.html.erb

* Update index.html.erb

* Update credentials.yml.tt

* Update omniauth_callbacks_controller.rb

* Update omniauth_callbacks_controller.rb

* wip

* Update connected_account.rb

* connected_accounts payload

* store creds

* cleaner

* Update authentication.rb

* Update authentication.rb

* clean

* Update google_oauth2.json

* add github, google logos

* simplify

* test ok

* simplify

* i18n

* clean

* w

* Update user_helper.rb

* Update index.html.erb

* w

* prep for github oauth

* Update _links.html.erb

* Update _links.html.erb

* choice divider

* Update credentials.yml.enc

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -158,6 +158,21 @@ en:
     terms:
       title: Terms
   users:
+    connected_accounts:
+      connected_account:
+        confirm_disconnect_message: Are you sure you want to disconnect this account?
+        connected_time_ago: Connected %{time} ago
+        disconnect_button: Disconnect
+      destroy:
+        success: Account disconnected successfully.
+      index:
+        available_connections: Available connections
+        connect_button: Connect
+        connect_provider_account: Connect your %{provider_name} account
+        connect_to_enable_auth: Connect your accounts to enable seamless authentication.
+        no_accounts_connected: You haven't connected any OAuth accounts yet.
+        title: Connected accounts
+        your_connected_accounts: Your connected accounts
     invitations:
       index:
         title: Outgoing invitations
