--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -168,11 +168,10 @@ en:
       index:
         available_connections: Available connections
         connect_button: Connect
-        connect_provider_account: Connect your %{provider_name} account
         connect_to_enable_auth: Connect your accounts to enable seamless authentication.
         no_accounts_connected: You haven't connected any OAuth accounts yet.
         title: Connected accounts
-        your_connected_accounts: Your connected accounts
+        your_connected_accounts: Connected accounts
     invitations:
       index:
         title: Outgoing invitations
