--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -137,6 +137,7 @@ en:
       destroy: Destroy
       edit: Edit
       new: New
+      show: Show
     errors:
       not_authorized: You are not authorized to perform this action.
       not_subscribed: You need to subscribe to access this page.
@@ -188,6 +189,5 @@ en:
         completed_description: Friends who've signed up and made their first purchase.
         referrals: Successful signups
         referrals_description: Friends who've joined using your link.
-        subtitle: Share your unique referral link and earn rewards when your friends
-          sign up and make their first purchase.
+        subtitle: Share your unique referral link and earn rewards when your friends sign up and make their first purchase.
         title: Invite friends, get rewards
