I18n tasks better setup (#265)
* i18n tasks better setup

* clean up some unused keys

* ignore some keys

* fix more keys

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,9 +15,6 @@ en:
   invitations:
     approve:
       success: Invitation approved
-    buttons:
-      approve: Join
-      reject: Reject
     errors:
       not_found: Invitation not found
     index:
@@ -70,10 +67,6 @@ en:
         user_removed_from_organization: User removed from organization
         you_have_left_the_organization: You have left the organization
       index:
-        access_settings:
-          invitations: Outgoing invitations
-          requests_to_join_organization: Incoming membership requests
-          title: Access Settings
         title: Teammates
       new:
         title: Invite teammate
@@ -89,11 +82,9 @@ en:
       index:
         title: Billing
       plan:
-        features: Current plan features
         manage_billing: Manage billing
         next_billing_date: Next billing date
         resume_subscription: Resume subscription
-        subscribe: Subscribe
         subscription_active: Subscription active
         subscription_cancelled: Subscription cancelled
         title: Manage subscription
@@ -110,7 +101,6 @@ en:
       update:
         success: Ownership transferred
     update:
-      error: An error occurred while updating the organization
       success: Organization updated
   public:
     organizations:
@@ -132,22 +122,19 @@ en:
       title: Search...
   shared:
     actions:
-      cancel: Cancel
       confirm: Are you sure?
       destroy: Destroy
       edit: Edit
       new: New
+      show: Show
     errors:
       not_authorized: You are not authorized to perform this action.
       not_subscribed: You need to subscribe to access this page.
       rate_limit: Try again later.
     navigation:
-      discover: Discover organizations
       edit_profile: Edit profile
       login: Log in
       logout: Log out
-      pending_invitations: Incoming invitations
-      pending_requests: Outgoing requests
       register: Register
       select_organization: Select organization
   static:
@@ -174,7 +161,7 @@ en:
         your_connected_accounts: Connected accounts
     invitations:
       index:
-        title: Outgoing invitations
+        title: Incoming invitations
     membership_requests:
       destroy:
         success: Membership request revoked
@@ -188,6 +175,5 @@ en:
         completed_description: Friends who've signed up and made their first purchase.
         referrals: Successful signups
         referrals_description: Friends who've joined using your link.
-        subtitle: Share your unique referral link and earn rewards when your friends
-          sign up and make their first purchase.
+        subtitle: Share your unique referral link and earn rewards when your friends sign up and make their first purchase.
         title: Invite friends, get rewards
