legal pages in markdown and modals

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -145,6 +145,10 @@ en:
       register: Register
       select_organization: Select organization
   static:
+    index:
+      title: Welcome to the app!
+    refunds:
+      title: Refunds
     pricing:
       title: Pricing
     privacy:
