i18n route for user

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -125,6 +125,7 @@ en:
   routes:
     memberships: teammates
     organizations: organizations
+    user: me
   search:
     index:
       title: Search...
